[package]
name = "warg-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
hashbrown = { version = "0.12", features = ["serde"] }

serde = "1.0"
prost = "0.11"
prost-types = "0.11"
pbjson = "0.5"
pbjson-types = "0.5"

hex = "0.4"
base64 = "0.13.0"
semver = "1.0"

p256 = "0.11"
secrecy = "0.8"
signature = "1.5"
digest = "0.10"
sha2 = "0.10"

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"]}
pretty_assertions = "1.1.0"
serde_json = "1.0"

[build-dependencies]
prost-build = { version = "0.11" }
pbjson-build = "0.5"
