[package]
name = "warg-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
serde = "1.0"
prost = "0.11"
prost-types = "0.11"
pbjson = "0.5"
pbjson-types = "0.5"
hex = "0.4"
base64 = "0.13.0"
serde_with = { version = "2.2.0", features = ["base64"] }
semver = { version = "1.0", features = ["serde"] }
p256 = "0.11"
secrecy = "0.8"
signature = "1.5"
indexmap = { version = "1.9.2", features = ["serde"] }
forrest = { path = "../forrest" }
warg-crypto = { path = "../warg-crypto" }
leb128 = "0.2.5"

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"]}
pretty_assertions = "1.1.0"
serde_json = "1.0"

[build-dependencies]
prost-build = { version = "0.11" }
pbjson-build = "0.5"
